# IndependentStudy-Fall2019

./: 3DPoints.csv  ConjugateGradientSolver.py  FiniteElementMesh.py  JacobiSolver.py  LaplacianSolver.py  LatticeMesh.py  ProjectiveDynamicsSolver.py  README.md  properties.json  testfile.txt  timeMeasures.txt  timePlotter.py
2-DSolver/: ConjugateGradientSolver.py  JacobiSolver.py  LaplacianSolver.py
usdViewer/: CMakeLists.txt
usdViewer/src/: CMakeLists.txt
usdViewer/src/usdViewer/: AnimatedMesh.h  CMakeLists.txt  LatticeMesh.h  main.cpp
usdViewer/src/usdViewer/Debug/: Demo3D.usda
